--- a/config.env
+++ b/config.env
@@ -1,8 +1,15 @@
 APP_NAME        = "gin-chat-svc"
-ELEPHANT_SQL    = "postgres://cynfwnde:qHyF7lRvFcVpF99Q1RoUvXFPxlf_S27X@fanny.db.elephantsql.com/cynfwnde"
+ELEPHANT_SQL    = ""
 LOG_PATH        = "logs/chat.log"
 LOG_LEVEL       = "debug"
 STATIC_FILE     = "static/file/"
 CHANNEL_TYPE    = "gochannel"
 KAFKA_HOST      = "kafka:9092"
 KAFKA_TOPIC     = "go-chat-message"
+
+# PostgreSQL
+# DBHOST          = localhost
+# DBNAME          = <yours>
+# DBUSER          = <yours>
+# DBPASSWORD      = <yours>
+# DBPORT          = <yours>
