--- a/config.env
+++ b/config.env
@@ -1,5 +1,5 @@
 APP_NAME        = "gin-chat-svc"
-ELEPHANT_SQL    = "postgres://citvewly:AJN40ytacOa7gAuG6thjzPZpC1PdpLjS@jelani.db.elephantsql.com/citvewly"
+ELEPHANT_SQL    = ""
 LOG_PATH        = "logs/chat.log"
 LOG_LEVEL       = "debug"
 STATIC_FILE     = "static/file/"
